<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.ys.gpiotest.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <EditText
        android:id="@+id/gpio_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_gpio_index" />

    <Button
        android:id="@+id/checkio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_io_available"/>

    <TextView
        android:id="@+id/invalid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#f91804"
        android:textSize="20sp"
        android:layout_marginLeft="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/get_io_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_io_status"/>

        <Button
            android:id="@+id/set_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/set_io_input"/>

        <Button
            android:id="@+id/set_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/set_io_output"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/get_io_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_io_value"/>

        <Button
            android:id="@+id/set_highvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/set_io_high"/>

        <Button
            android:id="@+id/set_lowvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/set_io_low"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warn"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal"
            android:textColor="#dfe61c" />


    </LinearLayout>

</LinearLayout>
